fix: исправить версию